Adapt to Nukkit