@@ -30,7 +30,7 @@ public class LevelEventPlusMain extends PluginBase implements Listener {
 
     public static boolean experimental; // Currently not at work
 
-    public final List<String> enabledLanguage = List.of(new String[]{"chs", "eng"});
+    public final List<String> enabledLanguage = new ArrayList<>(Arrays.asList("chs", "eng"));
 
     public static void loadAllLevelConfig() {
         configCache = new LinkedHashMap<>();
@@ -215,7 +215,6 @@ public class LevelEventPlusMain extends PluginBase implements Listener {
         path = this.getDataFolder().getPath();
         plugin = this;
         this.saveResource("config.yml", false);
-        this.saveResource("default_20230811.yml", false);
         // Loading Language File
         this.saveResource("languages/chs.properties", false);
         this.saveResource("languages/eng.properties", false);
